fixed WAVE contrast errors on home page

--- a/src/scss/media.scss
+++ b/src/scss/media.scss
@@ -2,6 +2,7 @@
   background-image: url('/images/mainhero-min.png');
   background-size: cover;
   background-position: center;
+  background-color: black;
   width: 100%;
   height: 300px;
   position: relative;
