--- a/src/scss/ui.scss
+++ b/src/scss/ui.scss
@@ -7,7 +7,7 @@
   overflow: hidden;
   clip: rect(0, 0, 0, 0);
   border: 0;
-  color: #e6e5e5;
+  color: #000000;
 }
 
 .carousel-indicators .active {
